# quick-start-learn-openGL

./: CMakeLists.txt  README.md
include/: log.h  shader.h
include/glad/: glad.h
lib/: libglfw.so.3.4
shader/: fragment_shader.txt  vertex_shader.txt
src/: glad.c  log.cpp  main.cpp  shader.cpp
